syntax = "proto3";

option go_package = "genproto/voting/";

package voting;

service VotingService{
    rpc Create(CreateVotingReq) returns(Void){}
    rpc GetById(ById) returns(GetVotingRes){}
    rpc GetAll(Filter) returns(GetAllVotingRes){}
    rpc Update(GetVotingRes) returns(Void){}
    rpc Delete(ById) returns(Void){}
}

message CreateVotingReq{
    string name = 1;
    string date = 2;
}

message GetVotingRes{
    string id = 1;
    string name = 2;
    string date = 3;
}

message GetAllVotingRes{
    repeated GetVotingRes Votings = 1;
}

message Filter{
    int32 Limit = 1;
    int32 Offset = 2;
}

message ById{
    string id = 1;
}

message Void{}
